--- a/TODO
+++ b/TODO
@@ -5,6 +5,7 @@
 - Multi arguments
 - Multi filter (cw + catalyst for example)
 - More filters for pulls + more than the first page
+- Verbose mode
 
 Commands:
 - Diff between tags
