--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@ Improvement:
 Maybe
 - Better Link customisation when printing
 - Inspect more than the first page of PRs
+- Travis CI export coverage results
 
 Commands:
 - Diff between tags
